# aitrade

./: .gitignore  ARCHITECTURE.md  Helper.md  appflow.config.json  count_stocks.py  docker-compose.yml  response.json  run_all.bat  run_all.ps1  scratch_add_table_columns.py  scratch_add_user_fields.py  scratch_admin_restrictions.py  scratch_creator_filter.py  scratch_edit.py  scratch_sidebar.py  scratch_update_profile_fields.py  servers.sh  test_db.py  test_kite.py  test_out.txt  test_refetch.ts
backend/: .env  .env.example  add_prediction_jobs.py  backfill_predictions.py  celerybeat-schedule  check_dims.py  check_regime.py  create_tables.py  dump.py  err.txt  out.txt  output.txt  query_db.py  requirements.txt  run_test.py  test_pred.py  test_resume.py  test_shape.py  test_tpml.py  test_types.py
backend/alembic/: env.py
backend/alembic/versions/: 1e1e71e906a3_add_index_ohlcv_table.py  (+13 more)
backend/app/: config.py  main.py
backend/scripts/: backfill_predictions.py  check_features.py  fix_missing_ensemble.py
backend/tests/: test_indicators.py  test_regime.py
frontend/: DESIGN_SYSTEM.md  capacitor.config.json  capacitor.config.ts  index.html  package-lock.json  package.json  query_db.py  test.js  test_pred.py  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
trading_env/: pyproject.toml
trading_env/tests/: test_env.py
trading_env/trading_env/: portfolio.py  rewards.py
trading_env/trading_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
trading_env/trading_env/envs/: __init__.py  base_env.py  swing_trading_env.py
(+125 files in other folders)
